# fastapi-react-assignment

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: af5b56c8a82c_create_user_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: security.py
app/models/: users.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
